--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "angular-moment": "^1.3.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
