--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "laravel-echo": "^1.4.0",
     "moment": "^2.22.2",
     "rxjs": "~6.3.3",
+    "toastr": "^2.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
